# stx-exparser

./: .gitignore  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
examples/: Makefile.in
examples/csvfilter/: Makefile.in
examples/csvtool/: Makefile.in
examples/simple/: Makefile.in
libstx-exparser/: AnyScalar.cc  ExpressionParser.cc  Makefile.in
m4/: fmi_cxx_compile_stdcxx.m4  fmi_cxx_compile_stdcxx_11.m4  fmi_cxx_compile_stdcxx_17.m4
perl-binding/: Makefile.in
testsuite/: AnyScalarTest.cc  Makefile.in
wxparserdemo/: Makefile.in
